[package]
name = "sbpf-coverage"
version = "0.2.1"
authors = ["Boris Astardzhiev <boris.astardzhiev@gmail.com>", "Samuel Moelius <sam@moeli.us>"]
description = "A tool for computing test coverage of Solana programs, maintained by LimeChain"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/LimeChain/anchor-coverage-dwarf"
homepage = "https://limechain.tech"
readme = "README.md"
keywords = ["solana", "coverage", "testing"]
categories = ["development-tools::testing"]

[dependencies]
addr2line = "0.26"
object = "0.38"
anyhow = "=1.0.100"
byteorder = "=1.5.0"
# BPF_ consts
solana-sbpf = "0.14.4"
sha2 = "=0.10.9"
hex = "=0.4.3"
clap = { version = "=4.5.54", features = ["derive"] }
